= Changelog

== Ice V

- Updating to Android SDK 36
- Updating libraries to latest versions

== Hate Dancin' 2025-08-24

- Fix show notes link

== Gaia 2025-03-16

- Fixed bug where the currently playing track wasn't shown as playing in the show screen
- Highlight the background of the currently playing track on the show screen
- Update api to handle nulls for title in Show and PartialShowData data classes

== Fishing For Fishies 2025-03-02

- Save player state, app restarts will no longer effect where you were left off in a show.
- Fix issue where player loses where it is in the playlist when switching between casting and
local playback.
- added show notes and ability to change recording source
- Fix reddit link in about page

== Evil Death Roll 2024-12-17

- Bug fixes and Performance
- Fixed Image Caching
- Sorting for shows and years
- Show media loading in media player ui

== Dawn of Eternal Night 2024-12-08

- Fix system ui icon being same color as app background
- Fix issue when playing a new show would always play the first song
even when taping other songs in the show.
- Show show title in place of band name in Android Auto
- Add settings screen, with ability to choose default stream type

== Converge-Patch1 2024-11-18

- Removes dependenciesInfo from bundle and apk for f-droid release

== Converge 2024-11-13

- Release for new play store listing
- Updates for f-droid release

== Big Fig Wasp 2024-11-07

- Setup Foss and Full Variants for f-droid release
- Added media player error state and cleaned up the PlayerState
- Display media player errors to the UI in a snackbar
- Added no poster url
- Update Rows Font and Spacing
- Added About Page

== Antarctica 2024-10-07

- Got the app up and running!